examples/errors/syntaxerror.ign
<program>
  <function nasme=safsdfa>
    {print(2++2)}
  </function>
</program>